--- a/app/views/layouts/_navigation_links.html.haml
+++ b/app/views/layouts/_navigation_links.html.haml
@@ -1,4 +1,4 @@
-- if user.signed_in?
+- if user_signed_in?
   %li= link_to t(:logout), destroy_user_session_path, method: :delete
   %li= link_to t(:login), new_user_session_path
   %li= link_to t(:edit_acount), edit_user_registration_path
