Make the users directory visible without login
for now all users are public

--- a/app/views/users/_user.html.haml
+++ b/app/views/users/_user.html.haml
@@ -1,5 +1,5 @@
 %td
   - if policy(user).show?
-    = link_to user.email, user
+    = link_to user.display_name, user
   - else
-    = user.name || user.email
+    = user.display_name
