group nav, reworked group directory

--- a/app/views/groups/index.html.haml
+++ b/app/views/groups/index.html.haml
@@ -1,23 +1,8 @@
-%h1 Listing groups
+%h1=t(".directory")
 
-%table
-  %tr
-    %th Name
-    %th Visibility
-    %th Participation
-    %th
-    %th
-    %th
+.directory
+  = render @groups
 
-  - @groups.each do |group|
-    %tr
-      %td= group.name
-      %td= group.visibility
-      %td= group.participation
-      %td= link_to 'Show', group
-      %td= link_to 'Edit', edit_group_path(group)
-      %td= link_to 'Destroy', group, :method => :delete, :data => { :confirm => 'Are you sure?' }
-
-%br
-
-= link_to 'New Group', new_group_path
+  %br
+  .actions
+    = link_to t('.new'), new_group_path
