made quite a bit of progress with gneeric action helpers using pundit and draper.
Some things are still missing . In particular a link_to form for memberships.

--- a/app/views/groups/_group.html.haml
+++ b/app/views/groups/_group.html.haml
@@ -1,5 +1,4 @@
 - cache group.cache_key(current_user) do
   .column[group]
-    %h2.name
-      = group.title
-    = group.actions
+    %h2.name= group.title
+    = group.overview_actions
